Fix dropdown cut off issue

--- a/client/my-sites/importer/section-import.scss
+++ b/client/my-sites/importer/section-import.scss
@@ -16,3 +16,9 @@
 		}
 	}
 }
+
+.import__onboarding-page {
+	.list__importers.list__importers-secondary {
+		min-height: 350px;
+	}
+}
